[package]
name = "spotify_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
oauth2 = "4.3.0"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json"] }
rspotify-model = "0.11.5"
tokio = { version = "1.22.0", features = ["full"] }
warp = "0.3.3"
